[metadata]
name = eugene 
version = 0.2.0
description = Tools for automated scientific discovery
long_description = file: README.rst
url = https://github.com/jantzen/eugene
project_urls = 
    Lab Page = https://www.ratiocination.org/
author=Benjamin C. Jantzen
author_email=bjantzen@vt.edu
maintainer=Benjamin C. Jantzen
maintainer_email=bjantzen@vt.edu
license=MIT
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

keywords = discovery kinds dynamical system-identification natural-kinds

[options]
python_requires = >=3.3
